--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,9 @@ a {
   color: #646cff;
   text-decoration: inherit;
 } */
-a:hover {
+/* a:hover {
   color: #486ebf;
-}
+} */
 /* 
 body {
   margin: 0;
@@ -68,15 +68,15 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) { */
   /* :root {
     color: #213547;
     background-color: #ffffff;
   } */
-  a:hover {
+  /* a:hover {
     color: #747bff;
-  }
+  } */
   /* button {
     background-color: #f9f9f9;
   }*/
-} 
+/* }  */
